--- a/codebook/RMD_codebook_BIOvars.Rmd
+++ b/codebook/RMD_codebook_BIOvars.Rmd
@@ -853,10 +853,10 @@ dbs_hdl_df %>%
   ) +
   labs(
     title = 'Allostatic Load Cutoff Values for HDL',
-    caption = 'Clinical cutoff is <39 and \n percentile-determined cutoff is <37.'
+    caption = 'Clinical cutoff is 39 and \n percentile-determined cutoff is 37.'
   )+
-  annotate("text", x = 58, y = 15, label = "Percentile") +
-  annotate("text", x = 35, y = 15, label = "Clinical")
+  annotate("text", x = 32.5, y = 15, label = "Percentile") +
+  annotate("text", x = 43, y = 15, label = "Clinical")
 
 ```
 
